tests/fsharp/typecheck/sigs/neg16.bsl

neg16.fs(7,13,7,16): typecheck error FS0644: Namespaces cannot contain extension members except in the same file and namespace declaration group where the type is defined. Consider using a module to hold declarations of extension members.

neg16.fs(23,10,23,11): typecheck error FS0935: Types with the 'AllowNullLiteral' attribute may only inherit from or implement types which also allow the use of the null literal

neg16.fs(35,10,35,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(38,10,38,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(41,10,41,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(44,10,44,11): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(47,10,47,13): typecheck error FS0934: Records, union, abbreviations and struct types cannot have the 'AllowNullLiteral' attribute

neg16.fs(49,7,49,23): typecheck error FS0842: This attribute is not valid for use on this language element

neg16.fs(52,7,52,23): typecheck error FS0842: This attribute is not valid for use on this language element

neg16.fs(59,8,59,17): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(60,8,60,21): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(60,8,60,21): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b> option'    
but here has type
    'string'    

neg16.fs(61,8,61,29): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(61,8,61,29): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b,'c> option'    
but here has type
    'string'    

neg16.fs(62,8,62,16): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(67,8,67,17): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(68,8,68,21): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(68,8,68,21): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b> option'    
but here has type
    'string'    

neg16.fs(69,8,69,29): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(69,8,69,29): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b,'c> option'    
but here has type
    'string'    

neg16.fs(70,8,70,16): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(75,12,75,21): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b>'    
but here has type
    'string'    

neg16.fs(76,12,76,25): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(76,12,76,25): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b> option'    
but here has type
    'string'    

neg16.fs(77,13,77,34): typecheck error FS3872: Multi-case partial active patterns are not supported. Consider using a single-case partial active pattern or a full active pattern.

neg16.fs(77,13,77,34): typecheck error FS0001: This expression was expected to have type
    'Choice<'a,'b,'c> option'    
but here has type
    'string'    

neg16.fs(78,12,78,20): typecheck error FS0001: This expression was expected to have type
    ''a option'    
but here has type
    'string'    

neg16.fs(85,8,85,18): typecheck error FS0039: The pattern discriminator 'FooA++' is not defined.

neg16.fs(85,7,85,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg16.fs(87,50,87,54): typecheck error FS0039: The value or constructor 'OneA' is not defined.

neg16.fs(87,60,87,69): typecheck error FS0039: The value or constructor 'TwoA+' is not defined.

neg16.fs(90,8,90,18): typecheck error FS0039: The pattern discriminator 'FooB++' is not defined.

neg16.fs(90,7,90,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg16.fs(97,15,97,16): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(100,11,100,12): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(100,11,100,12): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(103,7,103,9): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(103,7,103,9): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(119,17,119,18): typecheck error FS0823: The 'VolatileField' attribute may only be used on 'let' bindings in classes

neg16.fs(107,16,107,19): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(110,16,110,17): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(113,9,113,11): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(116,9,116,10): typecheck error FS0879: Volatile fields must be marked 'mutable' and cannot be thread-static

neg16.fs(130,10,130,11): typecheck error FS0935: Types with the 'AllowNullLiteral' attribute may only inherit from or implement types which also allow the use of the null literal
